--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         .cf:before,.cf:after{content:"";display:table}.cf:after{clear:both}.cf{zoom:1}
 
          body, html {
-           font-family: 'Helvetica', sansserif;
+           font-family: 'Lucida Grande', 'Helvetica', sans-serif;
            font-size:24px;
            height:100%;
          }
@@ -93,6 +93,8 @@
            font-size:80%;
            display:none;
          }
+         #install-info-content .controls {
+         }
          #nix, #win {
            margin-top:1em;
            display:none;
@@ -161,6 +163,12 @@
 
          .line {
            margin:.5em 0 0 0;
+           padding:.25em 0;
+         }
+
+         .line p {
+             border-left:10px solid #eee;
+             padding-left:.5em;
          }
 
          .feature {
@@ -168,15 +176,8 @@
          }
 
          .feature .more {
-             padding:1em .25em;
+             padding:1em .25em 0 .25em;
          }
-/*
-         #examples .feature:nth-child(5n+1) .more { text-shadow: 0 1px #333; color:#FFF5FD; background: #D82591; }
-         #examples .feature:nth-child(5n+2) .more { text-shadow: 0 1px #333;color:#686F7A; background: #3BF8FF; }
-         #examples .feature:nth-child(5n+3) .more { text-shadow: 0 1px #fff; color:#686F7A; background: #B5EB83; }
-         #examples .feature:nth-child(5n+4) .more { text-shadow: 0 1px #333; color:#FFF5FD; background: #EB83D3; }
-         #examples .feature:nth-child(5n+5) .more { text-shadow: 0 1px #333; color:#FFF5FD; background: #FF4696; }
-*/
 
          #info-left { margin-right:1em; }
 
@@ -297,13 +298,22 @@
              <div id="install-info-content">
                Are you a <a href="#" id="show-nix">unix/osx</a> or a <a href="#" id="show-win">Windows</a> user?
                <div id="nix">
-                 If you are running an unix-based operating system, after downloading sbt, open your terminal shell and run the following command
+                 <p>
+                   If you are running an unix-based operating system, open your terminal shell and enable execute permisions on the sbt script
+                 </p>
+                 <pre><code>chmod u+x sbt</code></pre>
+                 <p>
+                   Then run the install command to get the latest
+                 </P>
                  <pre><code>sbt install</code></pre>
-                 Afterwards you run the sbt command in any directory to create a new project.
+                 <p>
+                   Afterwards you run the sbt command in any directory to create a new project.
+                 </p>
                </div>
                <div id="win">
                  If you are a window user, ... run some .bat file?
                </div>
+               <div class="controls"><button id="hide-install-info" class="btn">Hide this</button></div>
              </div>
            </div>
            <div id="features" class="cf">
@@ -358,7 +368,9 @@
 > hello_</code></pre>
                  </div>
                  <div class="line">
-                   From the REPL you can execute project tasks and inspect settings
+                   <p>
+                     From the REPL you can execute project tasks and inspect settings
+                   </p>
                  </div>
                  <div class="line">
                    <pre><code>> compile
@@ -366,7 +378,9 @@
 [success] Total time: 1 s, completed Aug 21, 2011 7:34:52 PM</code></pre>
                  </div>
                  <div class="line">
-                   All settings and commands are tab-completable for fast, easy access
+                   <p>
+                     All settings and commands are tab-completable for fast, easy access
+                   </p>
                  </div>
                  <div class="line">
                    <pre><code>> show &lt;tab&gt;
@@ -382,14 +396,18 @@ Display all 153 possibilities? (y or n) </code></pre>
                <h3>Typesafety is a given.</h3>
                <div class="more">
                  <div class="line">
-                   All project configuration is scripted in Scala providing out of the box modularity and all of the flexibility of the Scala programming language.
+                   <p>
+                     All project configuration is scripted in Scala providing out of the box modularity and all of the flexibility of the Scala programming language.
+                   </p>
                  </div>
                  <div class="line">
                    <pre><code>override lazy val settings = super.settings :+
     (shellPrompt := { s => Project.extract(s).cid + "> " })</code></pre>
                  </div>
                  <div class="line">
-                   Simple projects will only require a simple configuration in <code>.sbt</code> format.
+                   <p>
+                     Simple projects will only require a simple configuration in <code>.sbt</code> format.
+                   </p>
                  </div>
                  <div class="line">
                    <pre><code>organization := "com.your.domain"
@@ -408,7 +426,9 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                <h3>Simple Extensibility.</h3>
                <div class="more">
                  <div class="line">
-                   <p>Plugins provide a means of injecting and augmenting settings and commands.</p><p> Since plugins are just Scala code, you can package and share plugins between projects.</p>
+                   <p>
+                     Plugins provide a means of injecting and augmenting settings and commands. Since plugins are just Scala code, you can package and share plugins between projects.
+                   </p>
                  </div>
                  <div class="line">
                    <pre><code>object MyPlugin extends Plugin {
@@ -428,7 +448,9 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                <h3>Only what you need.</h3>
                <div class="more">
                  <div class="line">
-                   <p>Sbt will only compile source code that has changed and when nessessary.</p><p>Why wait around for something to be recompiled when you can be doing more productive work?</p>
+                   <p>
+                     Sbt will only compile source code that has changed and when nessessary. Why wait around for something to be recompiled when you can be doing more productive work?
+                   </p>
                  </div>
                  <div class="line">
                    <pre><code>> compile
@@ -448,7 +470,9 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                <h3>Do repeat yourself.</h3>
                <div class="more">
                  <div class="line">
-                   All build tasks and commands can be re-triggered when dependant source code changes by prepending the <code>~</code> modifier, leaving you free to focus on your craft and not on life-wasting repetition.
+                   <p>
+                     All build tasks and commands can be re-triggered when dependant source code changes by prepending the <code>~</code> modifier, leaving you free to focus on your craft and not on life-wasting repetition.
+                   </p>
                  </div>
                  <div class="line">
                    <pre><code>> ~ test</code></pre>
@@ -463,7 +487,9 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                <h3>Fluency in many dialects.</h3>
                <div class="more">
                  <div class="line">
-                   Scala is a fast evolving and forward thinking language which, in the past, has led to binary incompatibility between versions. Sbt makes it simple to switch between and execute commands against your Scala source code over many versions of Scala with ease.
+                   <p>
+                     Scala is a fast evolving and forward thinking language which, in the past, has led to binary incompatibility between versions. Sbt makes it simple to switch between and execute commands against your Scala source code over many versions of Scala with ease.
+                   </p>
                  </div>
                  <div class="line">
                    <pre><code>> + compile</code></pre>
@@ -478,7 +504,9 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                <h3>Many frameworks. One test interface.</h3>
                <div class="more">
                  <div class="line">
-                   For some, testing is an afterthought. Sbt makes testing part of your normal workflow by providing a generic interface to validate your code against any supporting testing library.
+                   <p>
+                     For some, testing is an afterthought. Sbt makes testing part of your normal workflow by providing a generic interface to validate your code against any supporting testing library.
+                   </p>
                  </div>
                  <div class="line">
                    <pre><code>> test-only your.EasySpec</code></pre>
@@ -493,7 +521,9 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                <h3>There's room for more in here.</h3>
                <div class="more">
                  <div class="line">
-                   When it's time to make the split, Sbt makes it easy to coordinate multiple projects in one simple build file.
+                   <p>
+                     When it's time to make the split, Sbt makes it easy to coordinate multiple projects in one simple build file.
+                   </p>
                  </div>
                  <div class="line">
                    <pre><code>object YourBuild extends Build {
@@ -512,8 +542,10 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                <h3>Why wait?</h3>
                <div class="more">
                  <div class="line">
-                   By default, build tasks that do not depend on one another in parallel. This also applies to your tests. Instead of sequentially executing your tests, Sbt will run them in parallel.
+                   <p>
+                     By default, build tasks that do not depend on one another in parallel. This also applies to your tests. Instead of sequentially executing your tests, Sbt will run them in parallel.
                    ...something about parallel task execution...
+                   </p>
                  </div>
                  <div class="line">
                    <pre><code>/* fill me in */</code></pre>
@@ -528,7 +560,9 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                <h3>Simply dependable.</h3>
                <div class="more">
                  <div class="line">
-                   <p>Close your eyes. Now open them. You no longer have to mangage your dependencies in xml. Sbt provides a simple declarative dsl for weaving together what your project depends on and takes care of the rest.</p>
+                   <p>
+                     Close your eyes. Now open them. You no longer have to manage your dependencies in XML. Sbt provides a simple declarative dsl for weaving together what your library dependencies on and takes care of the rest.
+                   </p>
                  </div>
                  <div class="line">
                    <pre><code>libraryDependencies ++= Seq(
@@ -579,7 +613,7 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
              });
          });
 
-         $("#install-info-toggle").bind('click', function(){
+         $("#install-info-toggle, #hide-install-info").bind('click', function(){
              $('#install-info-content').slideToggle('fast', function() {
                  $('#nix, #win').hide();
              });
